# eurovision-crud-webapp

./: .gitignore  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix
db/: dump.sql
src/: app.py  utils.py  views.py
src/models/: countries.py  db_tables.py  events.py  languages.py  model.py  songs.py
src/templates/: base.html  countries.html  error.html  events.html  filters.html  index.html  languages.html  report.html  reports.html  song_form.html  songs.html
